<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/mainSettings"
        >
        <SwitchPreference
            android:key="offlineTranslate"
            android:defaultValue="true"
            android:title="@string/offlineTranslate">
        </SwitchPreference>
        <SwitchPreference
            android:key="showDictionary"
            android:defaultValue="true"
            android:title="@string/showDictionary">
        </SwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other"
        >
        <Preference
            android:key="aboutApp"
            android:title="@string/aboutApp"
            android:selectable="true"
            >
        </Preference>
        <Preference
            android:key="contactWithDeveloper"
            android:title="@string/contactWithDeveloper"
            android:selectable="true"
            >
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>