<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contactWithDeveloper"
                android:gravity="center"
                android:layout_marginLeft="@dimen/appbar_text_margin"
                android:layout_marginStart="@dimen/appbar_text_margin"
                android:textSize="@dimen/appbar_text_size"
                />
        </android.support.design.widget.AppBarLayout>
        <ImageView
            android:contentDescription="@string/desc_developer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/developer"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/about_text_size"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="@dimen/appbar_text_size"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:autoLink="web|email"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vk"
            android:autoLink="web"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
