<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/aboutApp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/appbar_text_margin"
                android:layout_marginStart="@dimen/appbar_text_margin"
                android:textSize="@dimen/appbar_text_size"
                />
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/yandextranslate"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/version"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/aboutAppText"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/usingTec"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="@dimen/about_text_size"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
