<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Spinner
                android:id="@+id/spinnerFromLang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:entries="@array/langs"
                android:layout_toLeftOf="@+id/switchLang"
                android:layout_toStartOf="@+id/switchLang"
                android:textAlignment="center"
                android:dropDownWidth="match_parent"
                >
            </Spinner>

            <ImageButton
                android:contentDescription="@string/desc_switchLang"
                android:id="@+id/switchLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_swap_horiz_black_30dp"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_centerInParent="true"
                >
            </ImageButton>

            <Spinner
                android:id="@+id/spinnerToLang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:entries="@array/langs"
                android:layout_toRightOf="@+id/switchLang"
                android:layout_toEndOf="@+id/switchLang"
                android:textAlignment="center"
                android:dropDownWidth="match_parent"
                >
                </Spinner>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:id="@+id/editText"
                    android:gravity="top"
                    android:padding="10dp"
                    android:hint="@string/enterText"
                    android:background="@null"
                    />
                <ImageButton
                    android:contentDescription="@string/desc_clearText"
                    android:id="@+id/clearText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:visibility="invisible"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/outline_gray"
                    />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/translateProgressBar"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_style"
                android:layout_margin="10dp"
                android:id="@+id/translateResult"
                android:visibility="gone"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/translatedText"
                            android:padding="10dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/translated_text_size"
                            android:layout_weight="1"
                            android:textIsSelectable="true"
                            />
                        <ImageButton
                            android:contentDescription="@string/desc_open_to_fullscreen"
                            android:id="@+id/openFullscreen"
                            android:src="@drawable/ic_fullscreen_black_24dp"
                            android:background="?selectableItemBackgroundBorderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/translatedByYandex"
                        android:text="@string/translatedByYandex"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text_size"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_style"
                android:layout_margin="10dp"
                android:id="@+id/dictionaryResult"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/dictionaryText"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
